--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -17,7 +17,7 @@
 </div>
 </div>
 </div>
-<div class="announcement-close-icon"><img src="/assets/close.png"></div>
+<div class="announcement-close-icon"><img src="{{ 'close.png' | asset_url }}" alt="close-icon"></div>
 </div>
 {% schema %}
 {
