--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -1,64 +1,31 @@
-<div class="carousel-inner">
-  {% for block in section.blocks %}
-
-    <div class="carousel-item {% if forloop.first %}active {%endif%} {% if link.active %}active{% endif %} "> <img src="{{ block.settings.slider-image | img_url:'master' }}" class="d-block w-100 lazyload" alt=""> </div>
-
-    <div class="mask">
-      <h1>{{ block.settings.heading-text }}</h1> 
-      <a href="{{ block.settings.link }}" class="btn gradient01 explore"> {{ block.settings.linktext }} </a> 
+<div class="breadcrumb" style="background-image: url('{{ section.settings.bg-img | img_url:'master' }}');background-size: cover;">
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            {% if section.settings.heading != blank %}
+                    <h1>{{ section.settings.heading | img_url:'master' }}</h1>
+            {% else %}
+            <h1>{{ page.title }}</h1>
+            {% endif %}
+        </div>
     </div>
-
-  {% endfor %}
 </div>
-
-
-
-
-
-
-
-
-
+</div>
 {% schema %}
-{
-  "name": "Slider",
-  "blocks":[
-      {
-            "name":"slider_image",
-            "type":"select",
-            "settings":[
-                {
-                    "type":"image_picker",
-                    "id":"slider-image",
-                    "label":"Images"
-                },
-                {
-                  "id": "heading-text",
-                  "type": "text",
-                  "label": "Heading"
-                },
-                {
-                  "id": "linktext",
-                  "type": "text",
-                  "label": "Button label"
-                },
-                {
-                  "id": "link",
-                  "type": "url",
-                  "label": "Button link"
-                }
-               
-
-            ]
-      }
-  ],
-  "presets": [
-        {
-            "name": "slider",
-            "category": "custom"
-        }
-      ]
-  
-}
-  
+  {
+    "name": "BreadCrumb",
+    "class": "index-section",
+    "settings": [
+    {
+      "id": "bg-img",
+      "type": "image_picker",
+      "label": "Image"
+    },
+    {
+      "id": "heading",
+      "type": "text",
+      "label": "Heading"
+    }
+]
+  }
 {% endschema %}
