--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -58,8 +58,8 @@
             <div class="search float-right">
               <div class="search-icon">
                   <a class="search-icon-link" href="javascript:void(0)">
-                      <img src="/asset/search.png" class="searchdefault" alt="Logo" >
-                      <img src="/asset/search-active.png" class="search_active_icon" alt="Logo" >
+                      <img src="/assets/search.png" class="searchdefault" alt="Search" >
+                      <img src="/assets/search-active.png" class="search_active_icon" alt="Search Active Icon" >
                   </a>
               </div>
               <form action="{{ routes.search_url }}" method="get" role="search" class="search search-modal__form">
@@ -67,18 +67,10 @@
                   <input class="search__input field__input" id="Search-In-Modal" type="search" name="q" value="{{ search.terms | escape }}" placeholder="{{ 'general.search.search' | t }}">
                   <label class="field__label" for="Search-In-Modal">{{ 'general.search.search' | t }}</label>
                   <input type="hidden" name="options[prefix]" value="last">
-                  <button class="search__button field__button" aria-label="{{ 'general.search.search' | t }}">
-                    <svg class="icon icon-search" aria-hidden="true" focusable="false" role="presentation">
-                      <use href="#icon-search">
-                    </svg>
-                  </button>
+                
                 </div>
               </form>
-              <button type="button" class="modal__close-button link link--text focus-inset" aria-label="{{ 'accessibility.close' | t }}">
-                <svg class="icon icon-close" aria-hidden="true" focusable="false" role="presentation">
-                  <use href="#icon-close">
-                </svg>
-              </button>
+              <div class="search-close-icon"><img src="/assets/close.png"></div>
           </div>
       
             </div>
