--- a/sections/page.liquid
+++ b/sections/page.liquid
@@ -1,4 +1,7 @@
 
+
+{% section 'breadcrumb' %}
+
 <div class="page-width page-width--narrow">
   <h2 class="page-title">
     {%- if section.settings.page.title != blank -%}
@@ -28,8 +31,7 @@
       "type": "page",
       "id": "page",
       "label": "t:sections.page.settings.page.label"
-    },
-    
+    }
   ],
   "presets": [
     {
