--- a/sections/general-content.liquid
+++ b/sections/general-content.liquid
@@ -1,17 +1,18 @@
-<div class="headlines">
+<div class="general-content" style="background-image: url('{{ section.settings.bg_image | img_url:'master' }}')">
 	<div class="container">
-		<div class="row" style="background-image: url('{{ section.settings.bg_image | img_url:'master' }}')">
+		<div class="row">
 			<div class="col-lg-12">
-				<div class="heading">
+				<div class="heading text-center">
 					{% if section.settings.heading != blank %}
-						<h1>{{ section.settings.heading }}</h1>
+						<h2>{{ section.settings.heading }}</h2>
 					{% endif %}
-				</div>
-				<div>
+				
 					{% if section.settings.subheading != blank %}
-						<h1>{{ section.settings.subheading }}</h1>
+						<h3>{{ section.settings.subheading }}</h3>
 					{% endif %}
 				</div>
+			</div>
+			<div class="content text-center">
 				<div>
 					{% if section.settings.text != blank %}
 						<p>{{ section.settings.text }}</p>
