--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -30,7 +30,7 @@
 
     {{ 'base.css' | asset_url | stylesheet_tag }}
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script>document.documentElement.className = document.documentElement.className.replace('no-js', 'js');</script>
@@ -79,7 +79,7 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="{{ 'lazysizes.min.js' | asset_url }}" async="async"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js/"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" ></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" ></script>
     <script src="{{ 'custom.js' | asset_url }}" async="async"></script>
   </body>
 </html>
