--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -1,12 +1,14 @@
 <div class="breadcrumb" style="background-image: url('{{ section.settings.bg-img | img_url:'master' }}');background-size: cover;">
 <div class="container">
     <div class="row">
+      <div class="heading-bead"></div>
         <div class="col-lg-12">
             {% if section.settings.heading != blank %}
-                    <h1>{{ section.settings.heading | img_url:'master' }}</h1>
+                    <h1>{{ section.settings.heading }}</h1>
             {% else %}
             <h1>{{ page.title }}</h1>
             {% endif %}
+        </div>
         </div>
     </div>
 </div>
