--- a/sections/ourservices.liquid
+++ b/sections/ourservices.liquid
@@ -1,100 +1,107 @@
-<div class="services">
-	{% if section.blocks != blank %}
-	<div class="container">
-		{% for block in section.blocks %}
-		{% assign mod = forloop.index | modulo: 2 %}
-			{% if mod != 0 %}
-				<div class="row">
-				<div class="col-lg-6">
-					{% if block.settings.logo-image != blank %}
-					<img src="{{ block.settings.logo-image | img_url : 'master' }}">
-					{% endif %}
-				</div>
-				<div class="col-lg-6">
-					{% if block.settings.heading != blank %}
-					<h1>{{ block.settings.heading }}</h1>
-					{% endif %}
-
-					{% if block.settings.button_label != blank %}
-					<a href="{{ block.settings.button_link }}">{{ block.settings.button_label }}</a>
-					{% endif %}
-
-					{% if block.settings.text != blank %}
-					<p>{{ block.settings.text }}</p>
-					{% endif %}
-				</div>
-				</div>
-			{% else %}
-				<div class="row">
-				
-				<div class="col-lg-6">
-					{% if block.settings.heading != blank %}
-					<h1>{{ block.settings.heading }}</h1>
-					{% endif %}
-
-					{% if block.settings.button_label != blank%}
-					<a href="{{ block.settings.button_link }}">{{ block.settings.button_label }}</a>
-					{% endif %}
-
-					{% if block.settings.text != blank %}
-					<p>{{ block.settings.text }}</p>
-					{% endif %}
-				</div>
-				<div class="col-lg-6">
-					{% if block.settings.logo-image != blank %}
-					<img src="{{ block.settings.logo-image | img_url : 'master' }}">
-					{% endif %}
-				</div>
-				</div>
-			{% endif %}
-		{% endfor %}
-		
-	</div>
-	{% endif %}
-</div>
-
-{% schema %}
-{
-   "name":"Services",
-   "blocks":[
-      {
-         "type":"image-section",
-         "name":"service",
-         "settings":[
-            {
-               "id":"logo-image",
-               "type":"image_picker",
-               "label":"Image"
-            },
-            {
-               "id":"heading",
-               "type":"text",
-               "label":"Heading"
-            },
-            {
-               "id":"button_label",
-               "type":"text",
-               "label":"Button label"
-            },
-            {
-               "id":"button_link",
-               "type":"url",
-               "label":"Button link"
-            },
-            {
-               "id":"text",
-               "type":"html",
-               "label":"Text"
-            }
-         ]
-      }
-      
-   ],
-   "presets":[
-      {
-         "name":"Services",
-         "category":"Services"
-      }
-   ]
-}
-{% endschema %}
+<div class="our-services" style="background-image: url('{{ section.settings.bg-img | img_url:'master' }}');background-size: cover;">
+    {% if section.blocks != blank %}
+    <div class="container">
+       {% for block in section.blocks %}
+       {% assign mod = forloop.index | modulo: 2 %}
+       {% if mod != 0 %}
+       <div class="row">
+          <div class="col-lg-4">
+             <div class="image">
+                {% if block.settings.logo-image != blank %}
+                <img src="{{ block.settings.logo-image | img_url : 'master' }}" class="img-fluid" alt="{{ block.settings.heading }}">
+                {% endif %}
+             </div>
+          </div>
+          <div class="col-lg-8">
+             <div class="content">
+                {% if block.settings.heading != blank %}
+                <h1>{{ block.settings.heading }}</h1>
+                {% endif %}
+                {% if block.settings.button_label != blank %}
+                <a href="{{ block.settings.button_link }}">{{ block.settings.button_label }}</a>
+                {% endif %}
+                {% if block.settings.text != blank %}
+                <p>{{ block.settings.text }}</p>
+                {% endif %}
+             </div>
+          </div>
+       </div>
+       {% else %}
+       <div class="row">
+          <div class="col-lg-8">
+             <div class="content">
+                {% if block.settings.heading != blank %}
+                <h1>{{ block.settings.heading }}</h1>
+                {% endif %}
+                {% if block.settings.button_label != blank %}
+                <a href="{{ block.settings.button_link }}">{{ block.settings.button_label }}</a>
+                {% endif %}
+                {% if block.settings.text != blank %}
+                <p>{{ block.settings.text }}</p>
+                {% endif %}
+             </div>
+          </div>
+          <div class="col-lg-4">
+             <div class="image">
+                {% if block.settings.logo-image != blank %}
+                <img src="{{ block.settings.logo-image | img_url : 'master' }}" class="img-fluid" alt="{{ block.settings.heading }}">
+                {% endif %}
+             </div>
+          </div>
+       </div>
+       {% endif %}
+       {% endfor %}
+    </div>
+    {% endif %}
+ </div>
+ {% schema %}
+ {
+ "name":"Services",
+ "settings": [
+ {
+ "id": "bg-img",
+ "type": "image_picker",
+ "label": "Image"
+ }
+ ],
+ "blocks":[
+ {
+ "type":"image-section",
+ "name":"service",
+ "settings":[
+ {
+ "id":"logo-image",
+ "type":"image_picker",
+ "label":"Image"
+ },
+ {
+ "id":"heading",
+ "type":"text",
+ "label":"Heading"
+ },
+ {
+ "id":"button_label",
+ "type":"text",
+ "label":"Button label"
+ },
+ {
+ "id":"button_link",
+ "type":"url",
+ "label":"Button link"
+ },
+ {
+ "id":"text",
+ "type":"html",
+ "label":"Text"
+ }
+ ]
+ }
+ ],
+ "presets":[
+ {
+ "name":"Services",
+ "category":"Services"
+ }
+ ]
+ }
+ {% endschema %}
