--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -78,8 +78,9 @@
     </script>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="{{ 'lazysizes.min.js' | asset_url }}" async="async"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js/"></script>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="{{ 'custom.js' | asset_url }}" async="async"></script>
   </body>
 </html>
