--- a/sections/main-collection-banner.liquid
+++ b/sections/main-collection-banner.liquid
@@ -1,61 +1,39 @@
-{{ 'component-collection-hero.css' | asset_url | stylesheet_tag }}
 
-<div class="collection-hero{% if section.settings.show_collection_image and collection.image %} collection-hero--with-image{% endif %}">
-  <div class="collection-hero__inner page-width">
-    <div class="collection-hero__text-wrapper">
-      <h1 class="collection-hero__title">
-        <span class="visually-hidden">{{ 'sections.collection_template.title' | t }}: </span>
-        {{- collection.title | escape -}}
-      </h1>
-
-      {%- if section.settings.show_collection_description -%}
-        <div class="collection-hero__description rte">{{ collection.description }}</div>
-      {%- endif -%}
-    </div>
-
-    {%- if section.settings.show_collection_image and collection.image -%}
-      <div class="collection-hero__image-container media">
-        <img
-          srcset="{%- if collection.image.width >= 165 -%}{{ collection.image | img_url: '165x' }} 165w,{%- endif -%}
-            {%- if collection.image.width >= 360 -%}{{ collection.image | img_url: '360x' }} 360w,{%- endif -%}
-            {%- if collection.image.width >= 535 -%}{{ collection.image | img_url: '535x' }} 535w,{%- endif -%}
-            {%- if collection.image.width >= 750 -%}{{ collection.image | img_url: '750x' }} 750w,{%- endif -%}
-            {%- if collection.image.width >= 1070 -%}{{ collection.image | img_url: '1070x' }} 1070w,{%- endif -%}
-            {%- if collection.image.width >= 1500 -%}{{ collection.image | img_url: '1500x' }} 1500w,{%- endif -%}"
-          src="{{ collection.image | img_url: '750x' }}"
-          sizes="(min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 100 | divided_by: 2 }}px, (min-width: 750px) calc(50vw - 130px), calc(50vw - 55px)"
-          alt="{{ collection.title | escape }}"
-          loading="lazy"
-          width="{{ collection.image.width }}"
-          height="{{ collection.image.height }}"
-        >
+  {%- if collection.image -%}
+<div class="breadcrumb" style="background-image: url('{{ collection.image | img_url:'master' }}');background-size: cover;">
+  {% else %}
+  <div class="breadcrumb" style="background-image: url('{{ section.settings.bg-img | img_url:'master' }}');background-size: cover;">
+  {%- endif -%}
+  <div class="container">
+      <div class="row">
+        <div class="heading-bead"></div>
+          <div class="col-lg-12">
+              {% if collection.handle == 'all'  %}
+              <h1>{{ section.settings.heading }}</h1>    
+              {% else %}
+              <h1>{{ collection.title }}</h1>
+              {% endif %}
+          </div>
+          </div>
       </div>
-    {%- endif -%}
   </div>
-</div>
-
-{% schema %}
-{
-  "name": "t:sections.main-collection-banner.name",
-  "class": "spaced-section spaced-section--full-width",
-  "settings": [
+  </div>
+  {% schema %}
     {
-      "type": "paragraph",
-      "content": "t:sections.main-collection-banner.settings.paragraph.content"
-    },
-    {
-      "type": "checkbox",
-      "id": "show_collection_description",
-      "default": false,
-      "label": "t:sections.main-collection-banner.settings.show_collection_description.label"
-    },
-    {
-      "type": "checkbox",
-      "id": "show_collection_image",
-      "default": false,
-      "label": "t:sections.main-collection-banner.settings.show_collection_image.label",
-      "info": "t:sections.main-collection-banner.settings.show_collection_image.info"
-    }
+      "name": "BreadCrumb",
+      "class": "index-section",
+      "settings": [
+      {
+        "id": "bg-img",
+        "type": "image_picker",
+        "label": "Image"
+      },
+      {
+        "id": "heading",
+        "type": "text",
+        "label": "Heading"
+      }
   ]
-}
-{% endschema %}
+    }
+  {% endschema %}
+  
