--- a/sections/main-collection-banner.liquid
+++ b/sections/main-collection-banner.liquid
@@ -12,6 +12,7 @@
               <h1>{{ section.settings.heading }}</h1>    
               {% else %}
               <h1>{{ collection.title }}</h1>
+              <h2>Collection</h2>
               {% endif %}
           </div>
           </div>
