--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -1,27 +1,26 @@
-{{ 'component-article-card.css' | asset_url | stylesheet_tag }}
-{{ 'component-card.css' | asset_url | stylesheet_tag }}
-{{ 'section-main-blog.css' | asset_url | stylesheet_tag }}
-
-
+<div class="all-blog">
+  <div class="container">
 {%- paginate blog.articles by 6 -%}
 
-  <div class="main-blog page-width">
-    <h1 class="title--primary">{{ blog.title | escape }}</h1>
-
-    <div class="blog-articles">
-      {%- for article in blog.articles -%}
-        <div class="blog-articles__article article">
+ 
+    <div class="row">
+      {%- for article in blog.articles  -%}
+      {% if forloop.first == true %}
+      {%else %}
+        <div class="col-lg-4">
           {%- render 'article-card', article: article, show_image: section.settings.show_image, show_date: section.settings.show_date, show_author: section.settings.show_author -%}
         </div>
+      {% endif %} 
       {%- endfor -%}
     </div>
 
     {%- if paginate.pages > 1 -%}
       {%- render 'pagination', paginate: paginate -%}
     {%- endif -%}
-  </div>
-{%- endpaginate -%}
 
+{%- endpaginate -%}
+</div>
+</div>
 {% schema %}
 {
   "name": "t:sections.main-blog.name",
