Home page Design

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -28,11 +28,13 @@
     {{ content_for_header }}
  
 
-    {{ 'base.css' | asset_url | stylesheet_tag }}
+  
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      {{ 'theme.css' | asset_url | stylesheet_tag }}
+
     <script>document.documentElement.className = document.documentElement.className.replace('no-js', 'js');</script>
   </head>
 
