--- a/sections/about-cbd.liquid
+++ b/sections/about-cbd.liquid
@@ -1,14 +1,15 @@
 <div class="about-cbd" style="background-image: url('{{ section.settings.bg-img | img_url:'master' }}');background-size: cover;">
-<div class="container">
+<div class="container-fluid">
+  <div class="inner-content">
     <div class="row">
       <div class="col-lg-6">
-          <div class="heading">
+          <div class="title-black">
                 {% if section.settings.heading != blank %}
-                    <h1>{{ section.settings.heading }}</h1>  
+                    <h2 class="h2">{{ section.settings.heading }}</h2>  
                 {% endif %}
             
                 {% if section.settings.sub-heading != blank %}
-                    <h4> {{ section.settings.sub-heading }}</h4>
+                    <h3 class="h3"> {{ section.settings.sub-heading }}</h3>
                 {% endif %}
             </div>
             <div class ="inner-text">
@@ -19,6 +20,7 @@
             </div>
       </div>
     </div>
+  </div>    
   </div>
 </div>
   
