--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -39,9 +39,9 @@
   </head>
 
   <body>
-    <a class="skip-to-content-link button visually-hidden" href="#MainContent">
+    {% comment %} <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ "accessibility.skip_to_text" | t }}
-    </a>
+    </a> {% endcomment %}
 
     {% section 'announcement-bar' %}
     {% section 'header' %}
