--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -73,7 +73,7 @@
                 </div>
                 <div class="search-close-icon">                  
                   <a href="javascript:void(0)">
-                      <img src="/assets/close-green.svg">
+                      <img src="{{ 'close-green.svg' | asset_url }}">
                   </a>
                 </div>
               </form>              
