--- a/sections/about-cbd.liquid
+++ b/sections/about-cbd.liquid
@@ -12,7 +12,7 @@
                     <h3 class="h3"> {{ section.settings.sub-heading }}</h3>
                 {% endif %}
             </div>
-            <div class ="inner-text">
+            <div class ="content">
                 
                 {% if section.settings.text != blank %}
                 {{ section.settings.text }}
