--- a/sections/services.liquid
+++ b/sections/services.liquid
@@ -1,11 +1,11 @@
 <div class="service" style="background-image: url('{{ section.settings.background_image | img_url:'master' }}');">
-    <div class="container">
-    <div class="heading">
+    <div class="container-fluid-xl">
+    <div class="title-white text-center">
        {% if section.settings.heading != blank %}
-          <h2 class="text-center">{{ section.settings.heading }}</h2>
+          <h2 class="text-center h2">{{ section.settings.heading }}</h2>
        {% endif %}
     </div>
-    <div class="services">
+    <div class="services-block">
        {% if section.blocks != blank %}
           <div class="row">
              {% for block in section.blocks %}
@@ -15,21 +15,18 @@
                           <img src="{{ block.settings.logo-image | img_url:'master' }}" alt="{{ block.settings.heading }}">
                      </div>
                    {% endif %}
-                   <div>
+                   <div class="content">
                       {% if block.settings.heading != blank  %}
-                         <h2 class="text-center">{{ block.settings.heading }}</h2>
+                         <h2 class="text-center text24">{{ block.settings.heading }}</h2>
                       {% endif %}
-                   </div>
-                   <div>
                       {% if block.settings.button_label != blank  %}
-                         <a href="{{ block.settings.button_link }}" class="btn btn-transparent text-center">{{ block.settings.button_label }}</a>
+                        <div class="btn-custom text-center w-100"><a href="{{ block.settings.button_link }}" class="btn btn-transparent btn-rounded text-center"><span>{{ block.settings.button_label }}</span></a></div>
                       {% endif %}
-                   </div>
-                   <div> 
                       {% if block.settings.text != blank  %}
                          <p class="text-center">{{ block.settings.text }}</p>
                       {% endif %}
                    </div>
+                   
                 </div>
              {% endfor %}
           </div>
